Tidying up after git issues

--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,6 @@ TDF_Climate_Change_Adaptation_Success_Review_CEPF_Draft.docx
 foreach.pdf
 gettingstartedParallel.pdf
 (Work - Ubuntu's conflicted copy 2015-07-02).Rhistory
-Grenada Dove Dry Forest CEPF
->>>>>>> 5673f516a9ca204117209b5273953d1468bc8689
+/Grenada Dove Dry Forest CEPF
+Review - Grenada dove, dry forest and climate change.docx
+
